--- a/iOS/WiFi-USB/Base.lproj/LaunchScreen.storyboard
+++ b/iOS/WiFi-USB/Base.lproj/LaunchScreen.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,7 +16,23 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_background" translatesAutoresizingMaskIntoConstraints="NO" id="Vzf-Xu-jF1">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="wmh-Hd-ipT">
+                                <rect key="frame" x="130" y="130" width="341" height="341"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wmh-Hd-ipT" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="5eS-qx-gLs"/>
+                            <constraint firstItem="wmh-Hd-ipT" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="E9b-Q9-uwv"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Vzf-Xu-jF1" secondAttribute="bottom" id="Ehb-gv-muC"/>
+                            <constraint firstItem="Vzf-Xu-jF1" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="topMargin" id="GzA-NA-iEg"/>
+                            <constraint firstItem="Vzf-Xu-jF1" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="HNz-IQ-1wH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Vzf-Xu-jF1" secondAttribute="trailing" constant="-20" id="rhu-Ly-422"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -23,4 +40,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="launch_background" width="682" height="682"/>
+        <image name="logo" width="341" height="341"/>
+    </resources>
 </document>
