--- a/web/index.css
+++ b/web/index.css
@@ -1,7 +1,67 @@
+/* FONTS */
+
+/**
+ * http://applemusic.tumblr.com/
+ */
+
+/** Ultra Light */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 100;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff2");
+}
+
+/** Thin */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 200;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff2");
+}
+
+/** Regular */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff2");
+}
+
+/** Medium */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: normal;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-medium-webfont.woff2");
+}
+
+/** Semi Bold */
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 500;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff2");
+}
+
+/** Bold */ 
+@font-face {
+  font-family: "San Francisco";
+  font-weight: bold;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff2");
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "San Francisco", "Helvetica", serif;
+    font-weight: 400;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+a {
+    text-decoration: none;
 }
 
 button,
@@ -11,33 +71,28 @@ input[type="button"]:focus {
     border: none;
     outline: none;
     background-color: transparent;
+    transition-duration: 0.2s;
+    font-size: 1em;
+    cursor: pointer;
 }
 
 .background-animate {
-    -webkit-animation: animate_bg 72s;
+/*    -webkit-animation: animate_bg 72s;*/
     animation: animate_bg 72s;
-    -webkit-animation-iteration-count: infinite;
+/*    -webkit-animation-iteration-count: infinite;*/
     animation-iteration-count: infinite;
 }
 
-@keyframes animate_bg {
-    0%   {background:#0ADE0D;}
-    7.7%   {background:#EAFFFF;}
-    15.4%   {background:#94FFFF;}
-    23.1%   {background:#0794FF;}
-    30.8%   {background:#E188FF;}
-    38.5%   {background:#FE1C4D;}
-    46.2%   {background:#EAFFFF;}
-    53.9%   {background:#0794FF;}
-    61.6%   {background:#AA88FF;}
-    69.3%   {background:#EAFFFF;}
-    77%   {background:#35FFEE;}
-    84.7%   {background:#5ADFA5;}
-    92.4%   {background:#84F11C;}
-    100%   {background:#0ADE0D;}
+button:active {
+    color: #555555 !important;
+/*    font-size: 0.98em;*/
 }
 
-@-webkit-keyframes animate_bg {
+button:active img {
+    color: #555555 !important;
+}
+
+@keyframes animate_bg {
     0%   {background:#0ADE0D;}
     7.7%   {background:#EAFFFF;}
     15.4%   {background:#94FFFF;}
@@ -63,7 +118,6 @@ input[type="button"]:focus {
     border: 1px solid #FFFD10;
     color: #FFFD10;
     padding: 7px 5px;
-    font-size: 1em;
     animation: reboot_glow 3s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
@@ -75,7 +129,7 @@ input[type="button"]:focus {
     width: 1em;
     margin-right: 7px;
     filter: drop-shadow(0px 0px 7px #161819);
-    -webkit-filter: url("./reboot-button-web_64.png");
+    -webkit-filter: url("./images/reboot-button-web_64.png");
     -webkit-animation: reboot_img_glow 3s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: alternate;
@@ -92,12 +146,17 @@ input[type="button"]:focus {
     100% {-webkit-filter: drop-shadow(0px 0px 7px #161819);}
 }
 
-#toggle-power {
-    border-radius: 100%;
+.centered {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+
+#toggle-power {
+    border-radius: 100%;
+    position: relative;
+    margin: auto;
     height: 25em;
     width: 25em;
     padding: 10px;
@@ -117,7 +176,7 @@ input[type="button"]:focus {
 
 #toggle-power img.power-on {
     filter: drop-shadow(0px 0px 7px #161819);
-    -webkit-filter: url("./power_button_green_512.png");
+    -webkit-filter: url("./images/power_button_green_512.png");
     -webkit-animation: power_on_glow 3s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: alternate;
@@ -126,12 +185,37 @@ input[type="button"]:focus {
 
 #toggle-power img.power-off {
     filter: drop-shadow(0px 0px 7px #EEEEEE);
-    -webkit-filter: url("./power_button_red_512.png");
+    -webkit-filter: url("./images/power_button_red_512.png");
     -webkit-animation: power_off_glow 3s;
     -webkit-animation-iteration-count: infinite;
     -webkit-animation-direction: alternate;
 }
 
+@media screen and (max-width: 500px){
+    
+    #toggle-power {
+        width: 75vw;
+        height: 75vw;
+    }
+    
+    #toggle-power img {
+        width: 75vw;
+        height: 75vw;
+    }
+}
+
+@media screen and (max-height: 500px){
+    
+    #toggle-power {
+        width: 75vh;
+        height: 75vh;
+    }
+    
+    #toggle-power img {
+        width: 75vh;
+        height: 75vh;
+    }
+}
 
 @-webkit-keyframes power_on_glow {
     0% {-webkit-filter: drop-shadow(0px 0px 1px #161819);}
@@ -141,4 +225,144 @@ input[type="button"]:focus {
 @-webkit-keyframes power_off_glow {
     0% {-webkit-filter: drop-shadow(0px 0px 1px #EEEEEE);}
     100% {-webkit-filter: drop-shadow(0px 0px 7px #EEEEEE);}
+}
+
+#update-status {
+    border-radius: 6px 6px;
+    border: 1px solid #6A06A5;
+    color: #6A06A5;
+    padding: 7px 5px;
+    position: relative;
+    margin: 20px auto;
+    display: block;
+    animation: status_update_glow 3s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes status_update_glow {
+    0% {text-shadow: 0px 0px 1px #EEEEEE;}
+    100% {text-shadow: 0px 0px 7px #EEEEEE;}
+}
+
+#info {
+    position: absolute;
+    top: 13px;
+    right: 13px;
+    overflow: visible;
+    border-radius: 100%;
+    padding: 6px;
+}
+
+#info img {
+    max-width: 30px;
+    filter: url("./images/info-icon.png") 30px;
+}
+
+#info:active {
+    background: radial-gradient(circle closest-side, #EEEEEE, transparent);
+}
+
+/* ---- Info Overlay ---- */
+
+div.info-overlay {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.7);
+    display: block;
+    transition-duration: 0.75;
+    overflow: scroll;
+    -webkit-overflow-scrolling: touch
+}
+
+div.rel-container {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    margin: 0px;
+/*    margin-top: -16px;*/
+}
+
+div.rel-container * {
+    text-align: center;
+    color: white;
+    display: block;
+    max-width: 400px;
+    margin: 5px auto;
+    font-weight: 200;
+    letter-spacing: 0.035em;
+    line-height: 1.2em;
+    overflow-y: visible;
+    -webkit-overflow-scrolling: touch;
+}
+
+.info-overlay #info-close {
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    padding: 5px 9px;
+    color: #FF3530;
+    border-radius: 4px 4px;
+    border: 1px solid #FF3530;
+    margin: 0px;
+    font-weight: 400;
+    text-shadow: 0px 0px 7px #FF3530;}
+    transition-duration: 0.2s;
+    animation: close_glow 3s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes close_glow {
+    0% {text-shadow: 0px 0px 1px #FF3530;}
+    100% {text-shadow: 0px 0px 7px #FF3530;}
+}
+
+.info-overlay h1 {
+    margin-top: 32px;
+}
+
+.info-overlay h3 {
+    margin-top: 32px;
+    font-weight: 400;
+}
+
+.info-overlay h4 a {
+    color: #FFFE45;
+}
+
+.info-overlay a.button {
+    padding: 5px 7px;
+    color: #933EC5;
+    border: 2px solid #933EC5;
+    border-radius: 10px 10px;
+    width: 150px;
+    font-weight: 400;
+    font-size: 1em;
+    cursor: pointer;
+    text-shadow: 0px 0px 7px #8216C1;
+    transition-duration: 0.2s;
+    animation: github_glow 3s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+.info-overlay a.button:active {
+    color: #555555;
+}
+
+@keyframes github_glow {
+    0% {text-shadow: 0px 0px 1px #8216C1;}
+    100% {text-shadow: 0px 0px 7px #8216C1;}
+}
+
+.info-overlay h5 {
+    margin-bottom: 15px;
+}
+
+.hidden {
+    visibility: hidden;
 }
