--- a/web/index.css
+++ b/web/index.css
@@ -1,49 +1,62 @@
 /* FONTS */
 
+
 /**
  * http://applemusic.tumblr.com/
  */
 
+
 /** Ultra Light */
+
 @font-face {
-  font-family: "San Francisco";
-  font-weight: 100;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff2");
+    font-family: "San Francisco";
+    font-weight: 100;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff2");
 }
+
 
 /** Thin */
+
 @font-face {
-  font-family: "San Francisco";
-  font-weight: 200;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff2");
+    font-family: "San Francisco";
+    font-weight: 200;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff2");
 }
+
 
 /** Regular */
+
 @font-face {
-  font-family: "San Francisco";
-  font-weight: 400;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff2");
+    font-family: "San Francisco";
+    font-weight: 400;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff2");
 }
+
 
 /** Medium */
+
 @font-face {
-  font-family: "San Francisco";
-  font-weight: normal;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-medium-webfont.woff2");
+    font-family: "San Francisco";
+    font-weight: normal;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-medium-webfont.woff2");
 }
+
 
 /** Semi Bold */
+
 @font-face {
-  font-family: "San Francisco";
-  font-weight: 500;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff2");
+    font-family: "San Francisco";
+    font-weight: 500;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff2");
 }
 
-/** Bold */ 
+
+/** Bold */
+
 @font-face {
-  font-family: "San Francisco";
-  font-weight: bold;
-  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff2");
+    font-family: "San Francisco";
+    font-weight: bold;
+    src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff2");
 }
 
 * {
@@ -54,7 +67,8 @@
     font-weight: 400;
 }
 
-html, body {
+html,
+body {
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -77,15 +91,15 @@ input[type="button"]:focus {
 }
 
 .background-animate {
-/*    -webkit-animation: animate_bg 72s;*/
+    /*    -webkit-animation: animate_bg 72s;*/
     animation: animate_bg 72s;
-/*    -webkit-animation-iteration-count: infinite;*/
+    /*    -webkit-animation-iteration-count: infinite;*/
     animation-iteration-count: infinite;
 }
 
 button:active {
     color: #555555 !important;
-/*    font-size: 0.98em;*/
+    /*    font-size: 0.98em;*/
 }
 
 button:active img {
@@ -93,20 +107,48 @@ button:active img {
 }
 
 @keyframes animate_bg {
-    0%   {background:#0ADE0D;}
-    7.7%   {background:#EAFFFF;}
-    15.4%   {background:#94FFFF;}
-    23.1%   {background:#0794FF;}
-    30.8%   {background:#E188FF;}
-    38.5%   {background:#FE1C4D;}
-    46.2%   {background:#EAFFFF;}
-    53.9%   {background:#0794FF;}
-    61.6%   {background:#AA88FF;}
-    69.3%   {background:#EAFFFF;}
-    77%   {background:#35FFEE;}
-    84.7%   {background:#5ADFA5;}
-    92.4%   {background:#84F11C;}
-    100%   {background:#0ADE0D;}
+    0% {
+        background: #0ADE0D;
+    }
+    7.7% {
+        background: #EAFFFF;
+    }
+    15.4% {
+        background: #94FFFF;
+    }
+    23.1% {
+        background: #0794FF;
+    }
+    30.8% {
+        background: #E188FF;
+    }
+    38.5% {
+        background: #FE1C4D;
+    }
+    46.2% {
+        background: #EAFFFF;
+    }
+    53.9% {
+        background: #0794FF;
+    }
+    61.6% {
+        background: #AA88FF;
+    }
+    69.3% {
+        background: #EAFFFF;
+    }
+    77% {
+        background: #35FFEE;
+    }
+    84.7% {
+        background: #5ADFA5;
+    }
+    92.4% {
+        background: #84F11C;
+    }
+    100% {
+        background: #0ADE0D;
+    }
 }
 
 #reboot {
@@ -135,15 +177,22 @@ button:active img {
     -webkit-animation-direction: alternate;
 }
 
-
 @keyframes reboot_glow {
-    0% {text-shadow: 0px 0px 1px #161819;}
-    100% {text-shadow: 0px 0px 7px #161819;}
+    0% {
+        text-shadow: 0px 0px 1px #161819;
+    }
+    100% {
+        text-shadow: 0px 0px 7px #161819;
+    }
 }
 
 @-webkit-keyframes reboot_img_glow {
-    0% {-webkit-filter: drop-shadow(0px 0px 1px #161819);}
-    100% {-webkit-filter: drop-shadow(0px 0px 7px #161819);}
+    0% {
+        -webkit-filter: drop-shadow(0px 0px 1px #161819);
+    }
+    100% {
+        -webkit-filter: drop-shadow(0px 0px 7px #161819);
+    }
 }
 
 .centered {
@@ -163,18 +212,22 @@ button:active img {
     overflow: visible;
 }
 
-#toggle-power img {
+#toggle-power .power-toggle {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    height: 23em;
-    width: 23em;
+    height: 24em;
+    width: 24em;
     padding: 10px;
+    border: 
     overflow: visible;
+    transition: 0.2s;
+    background-size: 22em 22em !important;
 }
 
-#toggle-power img.power-on {
+#toggle-power .power-on {
+    background: url("./images/power_button_green_512.png") no-repeat center;
     filter: drop-shadow(0px 0px 7px #161819);
     -webkit-filter: url("./images/power_button_green_512.png");
     -webkit-animation: power_on_glow 3s;
@@ -182,8 +235,8 @@ button:active img {
     -webkit-animation-direction: alternate;
 }
 
-
-#toggle-power img.power-off {
+#toggle-power .power-off {
+    background: url("./images/power_button_red_512.png")  no-repeat center;
     filter: drop-shadow(0px 0px 7px #EEEEEE);
     -webkit-filter: url("./images/power_button_red_512.png");
     -webkit-animation: power_off_glow 3s;
@@ -191,40 +244,57 @@ button:active img {
     -webkit-animation-direction: alternate;
 }
 
-@media screen and (max-width: 500px){
-    
+#toggle-power .power-toggle:active {
+    background: url("./images/power_button_gray_512.png")  no-repeat center;
+}
+
+@media screen and (max-width: 500px) {
     #toggle-power {
+        width: 75vw;
+        height: 75vw;
+        background-size: 70vw 70vw;
+    }
+    #toggle-power div {
         width: 75vw;
         height: 75vw;
     }
     
-    #toggle-power img {
-        width: 75vw;
-        height: 75vw;
+    #toggle-power .power-toggle {
+        background-size: 70vw 70vw !important;
     }
 }
 
-@media screen and (max-height: 500px){
-    
+@media screen and (max-height: 500px) {
     #toggle-power {
         width: 75vh;
         height: 75vh;
     }
-    
-    #toggle-power img {
+    #toggle-power .power-toggle {
         width: 75vh;
         height: 75vh;
+    }
+    
+    #toggle-power .power-toggle {
+        background-size: 70vh 70vh !important;
     }
 }
 
 @-webkit-keyframes power_on_glow {
-    0% {-webkit-filter: drop-shadow(0px 0px 1px #161819);}
-    100% {-webkit-filter: drop-shadow(0px 0px 7px #161819);}
+    0% {
+        -webkit-filter: drop-shadow(0px 0px 1px #161819);
+    }
+    100% {
+        -webkit-filter: drop-shadow(0px 0px 7px #161819);
+    }
 }
 
 @-webkit-keyframes power_off_glow {
-    0% {-webkit-filter: drop-shadow(0px 0px 1px #EEEEEE);}
-    100% {-webkit-filter: drop-shadow(0px 0px 7px #EEEEEE);}
+    0% {
+        -webkit-filter: drop-shadow(0px 0px 1px #EEEEEE);
+    }
+    100% {
+        -webkit-filter: drop-shadow(0px 0px 7px #EEEEEE);
+    }
 }
 
 #update-status {
@@ -241,8 +311,12 @@ button:active img {
 }
 
 @keyframes status_update_glow {
-    0% {text-shadow: 0px 0px 1px #EEEEEE;}
-    100% {text-shadow: 0px 0px 7px #EEEEEE;}
+    0% {
+        text-shadow: 0px 0px 1px #EEEEEE;
+    }
+    100% {
+        text-shadow: 0px 0px 7px #EEEEEE;
+    }
 }
 
 #info {
@@ -263,13 +337,14 @@ button:active img {
     background: radial-gradient(circle closest-side, #EEEEEE, transparent);
 }
 
+
 /* ---- Info Overlay ---- */
 
 div.info-overlay {
     position: fixed;
     height: 100%;
     width: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     display: block;
     transition-duration: 0.75;
     overflow: scroll;
@@ -283,7 +358,7 @@ div.rel-container {
     height: 100%;
     padding: 5px;
     margin: 0px;
-/*    margin-top: -16px;*/
+    /*    margin-top: -16px;*/
 }
 
 div.rel-container * {
@@ -309,31 +384,34 @@ div.rel-container * {
     border: 1px solid #FF3530;
     margin: 0px;
     font-weight: 400;
-    text-shadow: 0px 0px 7px #FF3530;}
-    transition-duration: 0.2s;
-    animation: close_glow 3s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    text-shadow: 0px 0px 7px #FF3530;
 }
 
+transition-duration: 0.2s;
+animation: close_glow 3s;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+
+}
 @keyframes close_glow {
-    0% {text-shadow: 0px 0px 1px #FF3530;}
-    100% {text-shadow: 0px 0px 7px #FF3530;}
+    0% {
+        text-shadow: 0px 0px 1px #FF3530;
+    }
+    
+    100% {
+        text-shadow: 0px 0px 7px #FF3530;
+    }
 }
-
 .info-overlay h1 {
     margin-top: 32px;
 }
-
 .info-overlay h3 {
     margin-top: 32px;
     font-weight: 400;
 }
-
 .info-overlay h4 a {
     color: #FFFE45;
 }
-
 .info-overlay a.button {
     padding: 5px 7px;
     color: #933EC5;
@@ -349,20 +427,18 @@ div.rel-container * {
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
-
 .info-overlay a.button:active {
     color: #555555;
 }
-
 @keyframes github_glow {
-    0% {text-shadow: 0px 0px 1px #8216C1;}
-    100% {text-shadow: 0px 0px 7px #8216C1;}
+    0% {
+        text-shadow: 0px 0px 1px #8216C1;
+    }
+    
+    100% {
+        text-shadow: 0px 0px 7px #8216C1;
+    }
 }
-
 .info-overlay h5 {
     margin-bottom: 15px;
-}
-
-.hidden {
-    visibility: hidden;
 }
