--- a/iOS/WK-WiFi-USB/Base.lproj/Interface.storyboard
+++ b/iOS/WK-WiFi-USB/Base.lproj/Interface.storyboard
@@ -1,74 +1,47 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="10117" systemVersion="16A239m" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="10032"/>
     </dependencies>
     <scenes>
-        <!--WiFi-USB-->
+        <!--Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller title="WiFi-USB" id="AgC-eL-Hgc" customClass="InterfaceController" customModule="WK_WiFi_USB" customModuleProvider="target">
+                <controller id="AgC-eL-Hgc" customClass="InterfaceController" customModule="WK_WiFi_USB" customModuleProvider="target">
                     <items>
-                        <imageView alignment="center" verticalAlignment="center" hidden="YES" image="Activity1" contentMode="scaleAspectFit" id="k6M-HY-O2x">
-                            <color key="tintColor" red="0.50980395079999996" green="0.086274512110000007" blue="0.75686275960000005" alpha="1" colorSpace="calibratedRGB"/>
+                        <imageView alignment="center" verticalAlignment="center" hidden="YES" image="Activity1" contentMode="scaleAspectFit" id="aeE-Ya-fKY">
+                            <color key="tintColor" red="0.93333333730697632" green="0.93333333730697632" blue="0.93333333730697632" alpha="1" colorSpace="calibratedRGB"/>
                         </imageView>
-                        <button alignment="center" verticalAlignment="center" id="Pw3-6N-8yB">
-                            <group key="contentGroup" width="0.80000000000000004" height="0.80000000000000004" alignment="left" id="h3i-Z0-odB">
+                        <button alignment="center" verticalAlignment="center" id="8O1-Y4-JA4">
+                            <group key="contentGroup" width="1" height="1" alignment="left" id="w2H-ER-dXu">
                                 <items>
-                                    <imageView width="1" height="1" alignment="center" verticalAlignment="center" image="power_button" contentMode="scaleAspectFit" animationDuration="1" id="7yG-cJ-CfQ">
-                                        <color key="tintColor" red="0.50980395079999996" green="0.086274512110000007" blue="0.75686275960000005" alpha="1" colorSpace="calibratedRGB"/>
+                                    <imageView width="1" height="1" alignment="center" verticalAlignment="center" image="power_button_mask" contentMode="scaleAspectFit" id="rAg-gg-V3c">
+                                        <color key="tintColor" red="0.93333333730697632" green="0.93333333730697632" blue="0.93333333730697632" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                 </items>
                             </group>
                             <connections>
-                                <action selector="togglePowerTap" destination="AgC-eL-Hgc" id="csP-1j-vcj"/>
+                                <action selector="togglePowerTap" destination="AgC-eL-Hgc" id="YKF-5h-Snk"/>
                             </connections>
                         </button>
                     </items>
-                    <menu key="menu" id="v6a-TQ-hEA">
+                    <menu key="menu" id="s5V-sT-2Pb">
                         <items>
-                            <menuItem title="Update Status" icon="repeat" id="854-qe-eFW">
+                            <menuItem title="Update Status" icon="shuffle" id="n9z-Ow-Epg">
                                 <connections>
-                                    <action selector="updateStatusTap" destination="AgC-eL-Hgc" id="UhM-Qx-VkO"/>
+                                    <action selector="updateStatusTap" destination="AgC-eL-Hgc" id="ugh-kO-YmX"/>
                                 </connections>
                             </menuItem>
                         </items>
                     </menu>
                     <connections>
-                        <outlet property="loadingIndicator" destination="k6M-HY-O2x" id="avl-3A-JVZ"/>
-                        <outlet property="powerButtonImage" destination="7yG-cJ-CfQ" id="opv-yy-MyJ"/>
-                        <outlet property="togglePowerButton" destination="Pw3-6N-8yB" id="xrT-4U-zoB"/>
+                        <outlet property="loadingIndicator" destination="aeE-Ya-fKY" id="X2Y-OX-BEJ"/>
+                        <outlet property="powerButtonImage" destination="rAg-gg-V3c" id="Ns2-Mg-9EK"/>
+                        <outlet property="togglePowerButton" destination="8O1-Y4-JA4" id="1YQ-rY-mnL"/>
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="235" y="347"/>
-        </scene>
-        <!--Glance Interface Controller-->
-        <scene sceneID="BOz-TT-tkC">
-            <objects>
-                <glanceController spacing="0.0" topTemplateType="body1Medium" id="0uZ-2p-rRc" customClass="GlanceController" customModule="WK_WiFi_USB" customModuleProvider="target">
-                    <items>
-                        <label alignment="left" text="Power Status" id="3qn-0F-3MJ">
-                            <color key="textColor" red="1" green="0.99215686319999996" blue="0.062745101750000004" alpha="1" colorSpace="calibratedRGB"/>
-                        </label>
-                        <label alignment="left" text="On/Off" id="koK-O7-DqQ"/>
-                        <group alignment="left" id="uCw-4Q-Ouw">
-                            <items>
-                                <imageView width="1" height="1" alignment="center" verticalAlignment="center" image="power_button" contentMode="scaleAspectFit" id="QZX-uY-OvK">
-                                    <color key="tintColor" red="0.50980395078659058" green="0.086274512112140656" blue="0.75686275959014893" alpha="1" colorSpace="calibratedRGB"/>
-                                </imageView>
-                            </items>
-                        </group>
-                    </items>
-                    <edgeInsets key="margins" left="0.0" right="0.0" top="0.0" bottom="14"/>
-                    <connections>
-                        <outlet property="powerButtonImage" destination="QZX-uY-OvK" id="sFC-ul-bMU"/>
-                        <outlet property="subLabelText" destination="koK-O7-DqQ" id="uga-mL-2d7"/>
-                    </connections>
-                </glanceController>
-            </objects>
-            <point key="canvasLocation" x="235" y="672"/>
         </scene>
     </scenes>
 </document>
